update the quick guide

--- a/BYOST_quick_guide.ipynb
+++ b/BYOST_quick_guide.ipynb
@@ -279,8 +279,10 @@
     "\n",
     "## showing a sub-sample of the two dataframe side by side\n",
     "from IPython.display import display_html \n",
-    "data_sample  = df_data[:10][df_data.columns[:10]].style.set_table_attributes(\"style='display:inline'\").set_caption('Subsample of Input data (features as coloumns (this case is wavelength), measurements as rows)')\n",
-    "condition_sample = df_conditions[:10].style.set_table_attributes(\"style='display:inline'\").set_caption('Subsample of the conditions to be modeled')\n",
+    "data_sample  = df_data[:10][df_data.columns[:9]].style.set_table_attributes(\"style='display:inline'\").set_caption(\n",
+    "               'Subsample of Input data (features as coloumns (this case is wavelength), measurements as rows)')\n",
+    "condition_sample = df_conditions[:10].style.set_table_attributes(\"style='display:inline'\").set_caption(\n",
+    "                   'Subsample of the conditions to be modeled')\n",
     "space = \"\\xa0\" * 20\n",
     "display_html(data_sample._repr_html_()+ space  + condition_sample._repr_html_(), raw=True)"
    ]
@@ -870,14 +872,6 @@
     "                                                label_cols = ['cond1'],\n",
     "                                                co_comp_Hsiao_temp=True,plot_gap=0.5)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85d15f92-a8db-4626-a6fe-369d1e66e36e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
